add a reset button to the deadmans switch

--- a/app/views/admin/visits/index.html.erb
+++ b/app/views/admin/visits/index.html.erb
@@ -1,6 +1,8 @@
 <div class="vitals-text-container">
     <h4><%= link_to "New Project", new_admin_project_path %></h4>
-
+</div>
+<div class="vitals-text-container">
+    <h4><%= link_to "Reset Switch", deadman_reset_path %></h4>
 </div>
 <br><h1>Sessions</h1>
 <ul>
