--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -94,7 +94,7 @@ header {
 
 
 #yechiel-k-card {
-  background-image: asset_url("yechiel-k.jpg");
+  background-image: asset_url("yechiel-k-ac.jpg");
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
