add polywork logo to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,7 @@
           <a href="<%= SocialLinks.twitter %>" target="_blank"><%= image_tag "twitter.png", class: "social-icon" %></a>
           <a href="<%= blog_path %>" target="_blank"><%= image_tag "medium.png", class: "social-icon" %></a>
           <a href="<%= SocialLinks.devto %>" target="_blank"><%= image_tag "https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg", class: "social-icon" %></a>
+          <a href="<%= SocialLinks.polywork %>" target="_blank"><%= image_tag "polywork.jpeg", class: "social-icon" %></a>
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Yechiel Kalmenson</h1>
