remove quora from contact page

--- a/app/views/website/contact.html.erb
+++ b/app/views/website/contact.html.erb
@@ -7,8 +7,7 @@
     <h3 class="profile-contact">LinkedIn:&nbsp;<%= link_to "Yechiel Kalmenson", SocialLinks.linkedin, target: "_blank" %> | 
     Github:&nbsp;<%= link_to "achasveachas", SocialLinks.github, target: "_blank" %></h3>
     <h3 class="profile-contact">Twitter:&nbsp;<%= link_to "@yechielk", SocialLinks.twitter, target: "_blank" %> | 
-    Quora:&nbsp;<%= link_to "Yechiel Kay", SocialLinks.quora, target: "_blank" %></h3>
-    <h3>DEV.to:&nbsp;<%= link_to "yechielk", SocialLinks.devto, target: "_blank" %></h3>
+    DEV.to:&nbsp;<%= link_to "yechielk", SocialLinks.devto, target: "_blank" %></h3>
     <br><br><br>
     <%= form_with url: "https://formspree.io/f/xrgoyvqp", class: "form-container", data: { remote: false } do |f| %>
         <%= f.text_field :name, placeholder: "Name:" %><br><br>
