remove Twitter from social links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       Website: yechiel.me
       Blog: blog.yechiel.me
       Email: holler@yechiel.me
-      Twitter: @yechielk
+      Bluesky: @yechiel.me
       GitHub: achasveachas
       LinkdIn: https://www.linkedin.com/in/yechiel-k
     -->
@@ -72,7 +72,7 @@
         <div class="social-icon-container">
           <a href="<%= SocialLinks.github %>" target="_blank"><%= image_tag "github.png", class: "social-icon" %></a>
           <a href="<%= SocialLinks.linkedin %>" target="_blank"><%= image_tag "linkedin.png", class: "social-icon" %></a>
-          <a href="<%= SocialLinks.twitter %>" target="_blank"><%= image_tag "twitter.png", class: "social-icon" %></a>
+          <a href="<%= SocialLinks.bluesky %>" target="_blank"><%= image_tag "bluesky.png", class: "social-icon" %></a>
           <a href="<%= blog_path %>" target="_blank"><%= image_tag "medium.png", class: "social-icon" %></a>
           <a href="<%= SocialLinks.devto %>" target="_blank"><%= image_tag "https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg", class: "social-icon" %></a>
           <a href="<%= SocialLinks.polywork %>" target="_blank"><%= image_tag "polywork.jpg", class: "social-icon" %></a>
