remove VMware from current experience

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Yechiel Kalmenson</h1>
-          <h2 class="profile-location">Software Engineer at VMware</h2>
+          <h2 class="profile-location">Senior Software Engineer</h2>
           <h2 class="profile-location">Blogger at <%= link_to "Rabbi On Rails", blog_path %></h2>
           <h2 class="profile-location">Editor and curator at <%= link_to "Torah && Tech", SocialLinks.torah_tech %></h2>
           <% if action_name == "index" %>
